<resources>
    <string name="app_name">ASONBOM</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Ingresar o registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">activity_home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="header_title_activity">Ingreso de datos</string>
    <string name="header_2_location">Escoge tu ubicación en el mapa: </string>
    <string name="header_2_date">Escoger la fecha: </string>
    <string name="header_2_time">Escoger la hora: </string>
    <string name="title_emergency">Título</string>
    <string name="details_emergency">Detalles</string>
    <string name="direction">Dirección</string>
    <string name="reference">Referencia</string>
    <string name="community">Comunidad</string>
    <string name="additional">Información Adicional</string>
    <string name="upload_images">Subir imágenes</string>
    <string name="create_emergency">Crear emergencia</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="search_title">Di algo… </string>

    <string name="title_nav_section">Ajustes</string>

    <string name="menu_home">Principal</string>
    <string name="menu_notifications">Notificaciones</string>
    <string name="menu_record">Historial</string>
    <string name="menu_settings">Configuración</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_comments">Comentarios</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_register">register</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


    <string name="title_grid">Escoge una categoria</string>
    <string name="txt_ima1">Incendio</string>
    <string name="txt_ima2">Accidentes laborales</string>
    <string name="txt_ima3">Desastre Natural</string>
    <string name="txt_ima4">Primeros auxilios</string>
    <string name="txt_ima5">Accidentes de transito</string>
    <string name="txt_ima6">Conato</string>
    <string name="txt_ima7">Rescates</string>
    <string name="txt_ima8">Traslado de enfermos</string>

</resources>
