<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".data.ui.register.Register">

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"

            android:text="@string/header_register"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/activity_register"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linear_map"
            android:layout_width="0dp"
            android:layout_height="290dp"

            android:layout_marginTop="24dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_address"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_address">


            <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/map_view_indicator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                map:zOrderOnTop="true"
                map:uiZoomGestures="true"
                map:uiZoomControls="true"
                map:uiMapToolbar="true"
                map:cameraMinZoomPreference="0.0"
                map:cameraMaxZoomPreference="1.0"
                map:mapType="normal" />
        </LinearLayout>

        <EditText
            android:id="@+id/editxt_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"

            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"

            android:hint="@string/direction"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/activity_register"
            app:layout_constraintTop_toBottomOf="@+id/linear_map" />

        <EditText
            android:id="@+id/editxt_reference"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"

            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/reference"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editxt_address"
            app:layout_constraintTop_toBottomOf="@+id/editxt_address" />

        <EditText
            android:id="@+id/editxt_community"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"

            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/community"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editxt_reference"
            app:layout_constraintTop_toBottomOf="@+id/editxt_reference" />

        <EditText
            android:id="@+id/editxt_additional"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"

            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/additional"
            android:inputType="text"
            android:lines="5"
            android:maxLines="5"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editxt_community"
            app:layout_constraintTop_toBottomOf="@+id/editxt_community" />

        <ImageView
            android:id="@+id/images_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editxt_additional"
            app:layout_constraintTop_toBottomOf="@+id/editxt_additional" />

        <Button
            android:id="@+id/button_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"

            android:text="@string/upload_images"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/images_view"
            app:layout_constraintTop_toBottomOf="@+id/images_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
